--- a/001-原生/001-基础.html
+++ b/001-原生/001-基础.html
@@ -44,7 +44,7 @@
   // globalCompositeOperation: "source-over"  全局组合样式
   // imageSmoothingEnabled: true    图片缩放平滑启用
   // imageSmoothingQuality: "low"   图片缩放平滑质量
-  // filter: "none" 拦截器
+  // filter: "none"
   /* 方法 */
   // 方法名  解释
   // fillRect     填充矩形
